@@ -721,7 +721,7 @@ processor counts. As a job is completing this number will reflect the
 current number of nodes allocated.
 (Valid for jobs only)
 .TP
-\fBnumtask\fR
+\fBnumtasks\fR
 Number of tasks requested by a job or job step.
 This reports the value of the \fB\-\-ntasks\fR option.
 (Valid for jobs and job steps)
